safari issue withh flex-wrap

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -172,13 +172,11 @@ img {
 #sidebar {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   width: 280px;
   background-color: var(--midnight-green-eagle);
   height: 100vh;
-  /* justify-content: flex-start;
-    align-items: flex-start;
-    grid-template-rows: repeat(4, auto); */
+  padding: 16px 0 0 0;
 }
 
 .about-options {
